objects/VlocityEPCDeployDestination__c.object
<CustomObject>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>Template</label>
        <referenceTo>VlocityEPCConfiguration__c</referenceTo>
        <relationshipLabel>EPC Target Environments</relationshipLabel>
        <relationshipName>Vlocity_EPC_Deploy_Destinations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Environment_Name__c</fullName>
        <formula>Environment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Environment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipName>Vlocity_EPC_Deploy_Destinations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Job_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Job Execution</label>
        <referenceTo>copado__JobExecution__c</referenceTo>
        <relationshipName>Vlocity_EPC_Deploy_Destinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Status__c</fullName>
        <formula>TEXT(Last_Job_Execution__r.copado__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Status</label>
        <type>Text</type>
    </fields>
    <label>EPC Target Environment</label>
    <nameField>
        <displayFormat>EPC-D-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EPC Target Environments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>